Final version with all models SVM, XGboost, Stocastic Gradient Decient, Random FOrest, LOgistic Regression and with data from 1 place and 5 different depth

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,8 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "aee19437",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-22 13:53:59.730130: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M2\n",
+      "2025-04-22 13:53:59.730162: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 8.00 GB\n",
+      "2025-04-22 13:53:59.730171: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 2.67 GB\n",
+      "2025-04-22 13:53:59.730381: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2025-04-22 13:53:59.730393: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import sys\n",
+    "import os\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "sys.path.append(os.path.abspath('../src'))\n",
+    "from preprocessing import clean_data\n",
+    "\n",
+    "# Paths\n",
+    "RAW_PATH = '../data/raw/marine_water_quality.xlsm'\n",
+    "CLEAN_PATH = '../data/processed/marine_water_quality_cleaned.csv'\n",
+    "\n",
+    "with tf.device('/device:CPU:0'):\n",
+    "    # Load and clean\n",
+    "    df_cleaned = clean_data(RAW_PATH)\n",
+    "\n",
+    "\n",
+    "    # Save cleaned version\n",
+    "    df_cleaned.to_csv(CLEAN_PATH, index=False)\n",
+    "    df_cleaned.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "89929283",
    "metadata": {},
    "outputs": [
     {
@@ -28,184 +69,219 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Depth</th>\n",
+       "      <th>5-day Biochemical Oxygen Demand (mg/L)</th>\n",
        "      <th>Ammonia Nitrogen (mg/L)</th>\n",
+       "      <th>Chlorophyll-a (μg/L)</th>\n",
        "      <th>Dissolved Oxygen (%saturation)</th>\n",
+       "      <th>Dissolved Oxygen (mg/L)</th>\n",
+       "      <th>E. coli (cfu/100mL)</th>\n",
        "      <th>Faecal Coliforms (cfu/100mL)</th>\n",
-       "      <th>Nitrate Nitrogen (mg/L)</th>\n",
        "      <th>Nitrite Nitrogen (mg/L)</th>\n",
-       "      <th>Orthophosphate Phosphorus (mg/L)</th>\n",
-       "      <th>Temperature (°C)</th>\n",
+       "      <th>Nitrate Nitrogen (mg/L)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Secchi Disc Depth (M)</th>\n",
        "      <th>Suspended Solids (mg/L)</th>\n",
-       "      <th>Total Nitrogen (mg/L)</th>\n",
-       "      <th>Total Phosphorus (mg/L)</th>\n",
-       "      <th>Unionised Ammonia (mg/L)</th>\n",
-       "      <th>Volatile Suspended Solids (mg/L)</th>\n",
+       "      <th>Temperature (°C)</th>\n",
        "      <th>Total Inorganic Nitrogen (mg/L)</th>\n",
        "      <th>Total Kjeldahl Nitrogen (mg/L)</th>\n",
-       "      <th>Chlorophyll-a (μg/L)</th>\n",
-       "      <th>Dissolved Oxygen (mg/L)</th>\n",
-       "      <th>pH</th>\n",
+       "      <th>Total Nitrogen (mg/L)</th>\n",
+       "      <th>Total Phosphorus (mg/L)</th>\n",
+       "      <th>Turbidity (NTU)</th>\n",
+       "      <th>Unionised Ammonia (mg/L)</th>\n",
+       "      <th>Volatile Suspended Solids (mg/L)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>6</th>\n",
        "      <td>Surface Water</td>\n",
-       "      <td>0.053</td>\n",
-       "      <td>113</td>\n",
-       "      <td>270</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.018</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>&lt;0.001</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>0.77</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>8.6</td>\n",
-       "      <td>7.1</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>4000</td>\n",
+       "      <td>4400</td>\n",
+       "      <td>0.081</td>\n",
+       "      <td>0.043</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>1.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>7</th>\n",
        "      <td>Middle Water</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>94</td>\n",
-       "      <td>190</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.017</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>0.68</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>7.1</td>\n",
-       "      <td>8.2</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>2300</td>\n",
+       "      <td>2400</td>\n",
+       "      <td>0.064</td>\n",
+       "      <td>0.036</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>8</th>\n",
        "      <td>Bottom Water</td>\n",
-       "      <td>0.048</td>\n",
-       "      <td>94</td>\n",
-       "      <td>140</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.018</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1.03</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>2900</td>\n",
+       "      <td>3000</td>\n",
        "      <td>0.07</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>7.2</td>\n",
-       "      <td>8.1</td>\n",
+       "      <td>0.037</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>0.006</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>12</th>\n",
        "      <td>Surface Water</td>\n",
-       "      <td>0.096</td>\n",
-       "      <td>85</td>\n",
-       "      <td>120</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.008</td>\n",
-       "      <td>0.017</td>\n",
-       "      <td>19.4</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>0.79</td>\n",
-       "      <td>0.04</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>2900</td>\n",
+       "      <td>0.022</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1.42</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>2.2</td>\n",
        "      <td>0.004</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>0.74</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>8.2</td>\n",
+       "      <td>6.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>13</th>\n",
        "      <td>Middle Water</td>\n",
-       "      <td>0.067</td>\n",
-       "      <td>93</td>\n",
-       "      <td>130</td>\n",
-       "      <td>0.029</td>\n",
-       "      <td>0.007</td>\n",
-       "      <td>0.013</td>\n",
-       "      <td>19.4</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>7.1</td>\n",
-       "      <td>8.2</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>6300</td>\n",
+       "      <td>7400</td>\n",
+       "      <td>0.019</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>14.9</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>3.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Depth Ammonia Nitrogen (mg/L)  Dissolved Oxygen (%saturation)  \\\n",
-       "0  Surface Water                   0.053                             113   \n",
-       "1   Middle Water                    0.04                              94   \n",
-       "2   Bottom Water                   0.048                              94   \n",
-       "3  Surface Water                   0.096                              85   \n",
-       "4   Middle Water                   0.067                              93   \n",
+       "            Depth 5-day Biochemical Oxygen Demand (mg/L)  \\\n",
+       "6   Surface Water                                    0.9   \n",
+       "7    Middle Water                                    0.9   \n",
+       "8    Bottom Water                                      1   \n",
+       "12  Surface Water                                    1.3   \n",
+       "13   Middle Water                                    0.9   \n",
        "\n",
-       "   Faecal Coliforms (cfu/100mL) Nitrate Nitrogen (mg/L)  \\\n",
-       "0                           270                    0.12   \n",
-       "1                           190                    0.11   \n",
-       "2                           140                    0.11   \n",
-       "3                           120                    0.04   \n",
-       "4                           130                   0.029   \n",
+       "   Ammonia Nitrogen (mg/L) Chlorophyll-a (μg/L)  \\\n",
+       "6                     0.15                  1.3   \n",
+       "7                     0.13                  1.3   \n",
+       "8                     0.16                  1.1   \n",
+       "12                    0.26                    1   \n",
+       "13                    0.23                  1.1   \n",
        "\n",
-       "  Nitrite Nitrogen (mg/L) Orthophosphate Phosphorus (mg/L)  Temperature (°C)  \\\n",
-       "0                   0.014                            0.018              19.5   \n",
-       "1                    0.01                            0.017              19.5   \n",
-       "2                    0.01                            0.018              19.5   \n",
-       "3                   0.008                            0.017              19.4   \n",
-       "4                   0.007                            0.013              19.4   \n",
+       "    Dissolved Oxygen (%saturation)  Dissolved Oxygen (mg/L)  \\\n",
+       "6                             80.0                      6.3   \n",
+       "7                             78.0                      6.2   \n",
+       "8                             82.0                      6.5   \n",
+       "12                            58.0                      4.9   \n",
+       "13                            60.0                      5.0   \n",
        "\n",
-       "  Suspended Solids (mg/L)  Total Nitrogen (mg/L) Total Phosphorus (mg/L)  \\\n",
-       "0                       3                   0.90                    0.07   \n",
-       "1                     3.4                   0.80                    0.07   \n",
-       "2                     3.4                   1.03                    0.07   \n",
-       "3                     8.5                   0.79                    0.04   \n",
-       "4                     2.4                   0.43                    0.03   \n",
+       "   E. coli (cfu/100mL) Faecal Coliforms (cfu/100mL) Nitrite Nitrogen (mg/L)  \\\n",
+       "6                 4000                         4400                   0.081   \n",
+       "7                 2300                         2400                   0.064   \n",
+       "8                 2900                         3000                    0.07   \n",
+       "12                2700                         2900                   0.022   \n",
+       "13                6300                         7400                   0.019   \n",
        "\n",
-       "  Unionised Ammonia (mg/L) Volatile Suspended Solids (mg/L)  \\\n",
-       "0                   <0.001                              0.6   \n",
-       "1                    0.002                              0.6   \n",
-       "2                    0.002                              0.6   \n",
-       "3                    0.004                              1.8   \n",
-       "4                    0.003                              0.5   \n",
+       "   Nitrate Nitrogen (mg/L)  ... Secchi Disc Depth (M)  \\\n",
+       "6                    0.043  ...                   2.3   \n",
+       "7                    0.036  ...                   2.3   \n",
+       "8                    0.037  ...                   2.3   \n",
+       "12                     0.1  ...                   3.0   \n",
+       "13                     0.1  ...                   3.0   \n",
        "\n",
-       "   Total Inorganic Nitrogen (mg/L) Total Kjeldahl Nitrogen (mg/L)  \\\n",
-       "0                             0.19                           0.77   \n",
-       "1                             0.16                           0.68   \n",
-       "2                             0.17                           0.91   \n",
-       "3                             0.14                           0.74   \n",
-       "4                             0.10                           0.39   \n",
+       "    Suspended Solids (mg/L) Temperature (°C)  Total Inorganic Nitrogen (mg/L)  \\\n",
+       "6                         2             17.3                             0.27   \n",
+       "7                       9.5             17.3                             0.23   \n",
+       "8                        10             17.3                             0.27   \n",
+       "12                       10             15.0                             0.38   \n",
+       "13                       15             14.9                             0.35   \n",
        "\n",
-       "  Chlorophyll-a (μg/L)  Dissolved Oxygen (mg/L)   pH  \n",
-       "0                  0.6                      8.6  7.1  \n",
-       "1                  0.5                      7.1  8.2  \n",
-       "2                  0.4                      7.2  8.1  \n",
-       "3                  1.8                      6.4  8.2  \n",
-       "4                  2.4                      7.1  8.2  "
+       "   Total Kjeldahl Nitrogen (mg/L)  Total Nitrogen (mg/L)  \\\n",
+       "6                            0.45                   0.57   \n",
+       "7                            0.45                   0.55   \n",
+       "8                            0.66                   0.77   \n",
+       "12                            1.3                   1.42   \n",
+       "13                            1.2                   1.32   \n",
+       "\n",
+       "   Total Phosphorus (mg/L)  Turbidity (NTU)  Unionised Ammonia (mg/L)  \\\n",
+       "6                     0.09              4.8                     0.005   \n",
+       "7                     0.06              3.6                     0.005   \n",
+       "8                     0.41              5.4                     0.006   \n",
+       "12                     0.2              2.2                     0.004   \n",
+       "13                    0.12              2.0                     0.004   \n",
+       "\n",
+       "   Volatile Suspended Solids (mg/L)  \n",
+       "6                               1.5  \n",
+       "7                                 4  \n",
+       "8                                 4  \n",
+       "12                              6.5  \n",
+       "13                              3.5  \n",
+       "\n",
+       "[5 rows x 25 columns]"
       ]
      },
      "execution_count": 2,
@@ -214,29 +290,13 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import sys\n",
-    "import os\n",
-    "\n",
-    "sys.path.append(os.path.abspath('../src'))\n",
-    "from preprocessing import clean_data\n",
-    "\n",
-    "# Paths\n",
-    "RAW_PATH = '../data/raw/marine_water.xlsm'\n",
-    "CLEAN_PATH = '../data/processed/water_quality_cleaned.csv'\n",
-    "\n",
-    "# Load and clean\n",
-    "df_cleaned = clean_data(RAW_PATH)\n",
-    "\n",
-    "# Save cleaned version\n",
-    "df_cleaned.to_csv(CLEAN_PATH, index=False)\n",
-    "df_cleaned.head()\n"
+    "df_cleaned.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89929283",
+   "id": "21a5e50e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -258,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
