--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e7a98810",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2185439c",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "61aaa1dc",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a0e31a58",
    "metadata": {},
    "outputs": [
@@ -681,8 +681,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1410635a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Dataset_1 ===\n",
+      "Rows: 7386, Columns: 25\n",
+      "\n",
+      "=== EDA Table ===\n",
+      "  Dataset                          Column  count      mean       std   min   25%   50%   75%    max  Missing Values\n",
+      "Dataset_1  Dissolved Oxygen (%saturation) 7333.0 71.937134 17.967753  4.00 60.00 72.00 83.00 187.00              53\n",
+      "Dataset_1         Dissolved Oxygen (mg/L) 7326.0  5.197475  1.396086  0.20  4.20  5.10  6.10  14.70              60\n",
+      "Dataset_1                              pH 7375.0  7.962942  0.272509  2.10  7.80  8.00  8.10   8.90              11\n",
+      "Dataset_1                  Salinity (psu) 7348.0 31.572020  1.906951 12.50 31.10 32.00 32.70  35.50              38\n",
+      "Dataset_1           Secchi Disc Depth (M) 7326.0  2.275758  0.740229  0.50  1.80  2.20  2.70   6.00              60\n",
+      "Dataset_1                Temperature (°C) 7360.0 23.029443  3.842591 11.20 19.60 23.80 26.30  33.50              26\n",
+      "Dataset_1 Total Inorganic Nitrogen (mg/L) 7375.0  0.324983  0.145813  0.01  0.22  0.31  0.41   1.62              11\n",
+      "Dataset_1           Total Nitrogen (mg/L) 7302.0  0.661431  0.314780  0.11  0.45  0.61  0.81   3.30              84\n",
+      "Dataset_1                 Turbidity (NTU) 7378.0  6.239252  5.710073  0.10  3.00  4.80  8.00  99.60               8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def summarize_dataset(df, label):\n",
+    "    # Dataset shape\n",
+    "    shape_info = {'Dataset': label, 'Rows': df.shape[0], 'Columns': df.shape[1]}\n",
+    "\n",
+    "    # Missing values per column\n",
+    "    missing_info = df.isnull().sum().reset_index()\n",
+    "    missing_info.columns = ['Column', 'Missing Values']\n",
+    "    missing_info = missing_info[missing_info['Missing Values'] > 0]\n",
+    "\n",
+    "    # Descriptive statistics (numeric columns only)\n",
+    "    stats = df.describe().T.reset_index().rename(columns={'index': 'Column'})\n",
+    "    stats = stats[['Column', 'count', 'mean', 'std', 'min', '25%', '50%', '75%', 'max']]\n",
+    "\n",
+    "    # Merge missing info with stats\n",
+    "    summary = pd.merge(stats, missing_info, on='Column', how='left').fillna(0)\n",
+    "    summary.insert(0, 'Dataset', label)\n",
+    "    summary['Missing Values'] = summary['Missing Values'].astype(int)\n",
+    "\n",
+    "    return shape_info, summary\n",
+    "\n",
+    "# Example usage\n",
+    "df = pd.read_csv(\"../data/marine_water_quality-2.csv\", encoding='utf-8')\n",
+    "df.columns = df.columns.str.strip()\n",
+    "df.drop(columns=['Water Control Zone', 'Station', 'Dates', 'Sample No'], inplace=True, errors='ignore')\n",
+    "\n",
+    "shape_info, eda_table = summarize_dataset(df, \"Dataset_1\")\n",
+    "\n",
+    "# Print shape info\n",
+    "print(f\"\\n=== {shape_info['Dataset']} ===\")\n",
+    "print(f\"Rows: {shape_info['Rows']}, Columns: {shape_info['Columns']}\")\n",
+    "\n",
+    "# Show summary EDA table\n",
+    "print(\"\\n=== EDA Table ===\")\n",
+    "print(eda_table.to_string(index=False))\n",
+    "\n",
+    "# Optionally export to CSV\n",
+    "eda_table.to_csv(\"../results/dataset1_eda_summary.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7231a8c4",
    "metadata": {},
    "outputs": [],
    "source": []
